# konatagger

./: .gitignore  Models.py  README.md  config.example.toml  config.py  go.mod  go.sum  main.go  main.py  predict.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: config.go
models/: .gitignore  top_tags_trans.txt  top_tags_zh.txt
onnx/: runtime.go
server/: handler.go  init.go  types.go  util.go
service/: handler.go  infer.go  init.go  types.go  util.go
