[project]
name = "konatagger"
version = "0.2.0"
description = "Tagging images API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.7",
    "einops>=0.7.0",
    "fastapi>=0.115.7",
    "h11>=0.16.0",
    "jinja2>=3.1.6",
    "pillow>=9.4.0",
    "pillow-avif-plugin>=1.5.0",
    "python-multipart>=0.0.20",
    "safetensors>=0.4.1",
    "setuptools>=78.1.1",
    "torch>=2.6.0",
    "torchvision>=0.15.2",
    "transformers>=4.50.0",
    "uvicorn>=0.34.0",
]


[tool.ruff]
lint.select = ["I"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

# [tool.uv]
# conflicts = [[{ extra = "cpu" }, { extra = "cu121" }]]

# [project.optional-dependencies]
# cpu = ["torch>=2.0.1", "torchvision>=0.15.2"]
# cu121 = ["torch>=2.0.1", "torchvision>=0.15.2"]


# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true

# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cu121", extra = "cu121" },
#   { index = "pytorch-cpu", extra = "cpu" },
# ]
# torchvision = [
#   { index = "pytorch-cu121", extra = "cu121" },
#   { index = "pytorch-cpu", extra = "cpu" },
# ]
